k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-app
          image: 010928221945.dkr.ecr.us-east-1.amazonaws.com/springboot-demo:latest
          ports:
            - containerPort: 8085
