k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: ivolve
spec:
  type: NodePort
  selector:
    app: springboot-app
  ports:
    - port: 8085
      targetPort: 8085
